--- a/index.html
+++ b/index.html
@@ -479,11 +479,11 @@
                           <div class="dropdown">
     <button class="dropdown-btn" onclick="toggleDropdown(event)">Tools and Blog</button>
     <div class="dropdown-content">
-      <a href="Sitemap-url-extractor.html">Sitemap Url Extractor</a>
-         <a href="Keywords-url-Generator.html">Keywords Url Generator</a>
-         <a href="">URl Encoder/Decoder</a>
-        <a href=""> Url Parser</a>                           
-      <a href="">Blog</a>
+      <a href="sitemap-url-exctractor-tool.html">Sitemap Url Extractor</a>
+         <a href="title-url-generator.html">Title Url Generator</a>
+         <a href="url-encoder-decoder.html">URl Encoder/Decoder</a>
+        <a href="url-parser-tool.html"> Url Parser</a>                           
+      <a href="blog.html">Blog</a>
     </div>
   </div>
 
@@ -506,7 +506,7 @@
 </div>
 
         <div class="container">
-            <h1>Keywords From Url Extractor Tool</h1>
+            <h1>Keywords from URL Extractor Tool | Keywords Extractor from Sitemap</h1>
         <textarea id="urlInput" placeholder="Paste up to 500 URLs here"></textarea>
         <div class="button-container">
             <button id="copyButton">Copy URLs</button>
