--- a/index.html
+++ b/index.html
@@ -475,17 +475,19 @@
             <a href="chrome-extension-for-keyword-extraction-from-urls.html">Chrome Extention</a>
               <a href="about-us.html" target="_blank">About Us</a>
             <a href="contact-us.html" target="_blank">Contact Us</a>
-                    <div class="dropdown-menu-container">
-                          <div class="dropdown">
+                   <div class="dropdown-menu-container">
+  <div class="dropdown">
     <button class="dropdown-btn" onclick="toggleDropdown(event)">Tools and Blog</button>
-    <div class="dropdown-content">
-      <a href="sitemap-url-exctractor-tool.html">Sitemap Url Extractor</a>
-         <a href="title-url-generator.html">Title Url Generator</a>
-         <a href="url-encoder-decoder.html">URl Encoder/Decoder</a>
-        <a href="url-parser-tool.html"> Url Parser</a>                           
+    <div class="dropdown-content" style="display: none;">
+      <a href="sitemap-url-extractor-tool.html">Sitemap URL Extractor</a>
+      <a href="title-url-generator.html">Title URL Generator</a>
+      <a href="url-encoder-decoder.html">URL Encoder/Decoder</a>
+      <a href="url-parser-tool.html">URL Parser</a>                           
       <a href="blog.html">Blog</a>
     </div>
   </div>
+</div>
+
 
 
             </nav>
