title-url-generator.html

--- a/title-url-generator.html
+++ b/title-url-generator.html
@@ -523,7 +523,7 @@
         </div>
     
         <div class="container">
-            <h1>Title Generator Url Generator Tool</h1>
+            <h1>Title Generator Tool</h1>
             <label for="inputText">Enter Text:</label>
             <input type="text" id="inputText" placeholder="Enter your text here">
 
