url-parser-tool.html

--- a/url-parser-tool.html
+++ b/url-parser-tool.html
@@ -486,6 +486,35 @@
             }
         }   
 </style>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Title URL Generator",
+  "url": "https://keywordsfromurls.com/title-url-generator.html",
+  "description": "A tool to generate SEO-friendly titles and URLs for your content. Use this tool to create optimized slugs and titles that help with SEO rankings.",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://keywordsfromurls.com/title-url-generator.html"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Keywords From URLs",
+    "url": "https://keywordsfromurls.com",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://keywordsfromurls.com/logo.png"
+    }
+  },
+  "potentialAction": {
+    "@type": "Action",
+    "name": "Generate Title and URL",
+    "target": "https://keywordsfromurls.com/title-url-generator.html#generate"
+  },
+  "keywords": "Title generator, URL generator, SEO tool, slugs, keyword optimization"
+}
+</script>
+
   <!-- 
   <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
 <!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script> -->
